# aoc_alternative_ranking

./: .gitignore  CMakeLists.txt  deploy.sh  index.php  styles.css
src/: aoc_alternative_ranking.pro  jsonhelper.h  leaderboard.cpp  leaderboard.h  main.cpp  manager.cpp  manager.h
